filer/private/sass/components/_navigator.scss
//##############################################################################
// NAVIGATOR

body {
    &.dz-drag-hover {
        .drag-hover-border {
            display: none !important;
        }
        .navigator-table tbody td,
        .navigator-table tbody .unfiled td {
            background-color: $hover-bg !important;
            a.action-button {
                border-color: $gray-lighter !important;
                color: $gray-lighter !important;
                background-color: white !important;
            }
        }
    }
    &.reset-hover td {
        background-color: white !important;
    }
}
.drag-hover-border {
    position: fixed;
    border-top: solid 2px $color-primary;
    border-bottom: solid 2px $color-primary;
    pointer-events: none;
    z-index: 100;
}

.filebrowser .navigator-table {
    // required for django CMS <= 3.1 #673
    width: 100%;
    margin: 0;
    border-top: solid 1px $gray-lighter !important;
    border-collapse: collapse !important;
    thead th,
    tbody td {
        text-align: left;
        font-weight: normal;
        vertical-align: middle;
        padding: 5px !important;
        border-left: 0 !important;
        border-bottom: 1px solid $gray-lighter;
        border-top: 1px solid transparent;
        background: none !important;
    }
    tbody td {
        padding: 11px 5px !important;
    }
    tbody tr.selected {
        .action-button span {
            color: $gray-darker !important;
        }
    }
    .unfiled td {
        padding: 12px 5px !important;
        background-color: $gray-table !important;
        a,
        a:hover {
            color: $gray !important;
        }
    }
    .column-checkbox {
        text-align: center;
        width: 20px;
        padding-left: 20px !important;
        input {
            // makes sure that checkbox is vertical aligned #664
            vertical-align: middle;
            margin: 0;
        }
    }
    .column-name a {
        color: $color-primary;
    }
    .column-icon {
        width: 25px;
        // removes padding to make sure that column has correct height #664
        padding-top: 0 !important;
        padding-bottom: 0 !important;
        img {
            width: 25px;
            height: auto;
        }
    }
    .column-action {
        text-align: center;
        white-space: nowrap;
        width: 70px;
        padding-right: 20px !important;
        a {
            font-size: 16px !important;
            margin: 0;
        }
        .action-button {
            @include button-variant($btn-default-color, $btn-default-bgcolor, $btn-default-border, true);
            padding: 9px !important;
            span {
                font-size: 16px;
                &:before {
                    vertical-align: middle;
                }
            }
        }
    }
    .no-files {
        color: $gray;
        font-size: $font-size-normal;
        text-align: center;
        padding: 40px 0 !important;
        background-color: $gray-lightest !important;
        span {
            font-size: 20px;
            margin-right: 10px;
            &:before {
                vertical-align: sub;
            }
        }
    }
    .dz-drag-hover {
        td {
            position: relative;
            background: $hover-bg !important;
            box-sizing: border-box !important;
            a {
                &.action-button {
                    border-color: $gray-lighter !important;
                    color: $gray-lighter !important;
                    background-color: white !important;
                }
                &.icon {
                    color: $gray-lighter !important;
                    background-color: white !important;
                }
                color: $color-primary !important;
            }
        }
    }
    &.dz-drag-hover {
        position: relative;
        .drag-hover-border {
            display: none !important;
        }
        td {
            background: $hover-bg !important;
            box-sizing: border-box !important;
            a.action-button {
                border-color: $gray-lighter !important;
                color: $gray-lighter !important;
                background-color: white !important;
            }
        }
    }
    .reset-hover,
    &.reset-hover {
        td {
            background-color: $white !important;
        }
        .dz-drag-hover {
            td {
                background: $hover-bg !important;
            }
        }
    }
}
/* ... */

